prover-ray/zkcdriver/testdata/synced/invalid/basic_33.zkc
//error:8:15-22:expected type (u16,u16)
pub input data(address:u16) -> (lhs:u16, rhs:u16, val:u16)

// prove that two numbers add up to a third.
fn main() {
    var lhs:u16, rhs:u16
    //
    lhs,rhs = data[0]

    if (lhs + rhs) != 0 {
        fail
    }

    return
}
